package main.mechanics;

public class Motore {
    private String numeroSerie;
    private String modello;

    public Motore(String numeroSerie, String modello) {
        this.numeroSerie = numeroSerie;
        this.modello = modello;
    }
}
